# indie_studio

./: .gitignore  CMakeLists.txt  README.md  log  requierements.sh  save.yep
.github/workflows/: COMPILE_UBUNTU_WINDOWS.yml  discord.yml
assets/background/: stone-terrain.glb
assets/block/: bomb.glb  explo.glb  smoke.glb  speed.glb  tnt.glb
assets/shader/skybox/glsl330/: skybox.fs
assets/steve-obj/: steve.glb
assets/steve-obj/anims/: steve_01.glb  steve_02.glb  steve_03.glb  steve_04.glb  steve_05.glb  steve_06.glb  steve_07.glb  steve_08.glb  steve_09.glb  steve_10.glb  steve_11.glb  steve_12.glb  steve_13.glb  steve_14.glb  steve_15.glb  steve_16.glb  steve_17.glb  steve_18.glb  steve_19.glb  steve_21.glb  steve_22.glb  steve_23.glb  steve_24.glb  steve_25.glb  steve_26.glb  steve_27.glb  steve_28.glb  steve_29.glb  steve_30.glb  steve_31.glb  steve_32.glb  steve_33.glb  steve_34.glb  steve_35.glb  steve_36.glb  steve_37.glb  steve_38.glb  steve_39.glb
include/: Bomberman.hpp  Camera.hpp  Color.hpp  Error.hpp  Image.hpp  Indie.hpp  Model.hpp  Shader.hpp  Sound.hpp  Texture.hpp  Vector.hpp  Window.hpp  rayLib.hpp
include/entityComponent/: Bomberman.hpp  Manager.hpp  Object.hpp
include/raylib/: Camera.hpp  Gamepad.hpp  Mesh.hpp  Model.hpp  Ray.hpp  Rectangle.hpp  RenderTexture.hpp  Texture.hpp  Vector.hpp  rayLib.hpp
src/: Bomberman.cpp  Bomberman.hpp  Indie.hpp  main.cpp  mainGamepad.cpp  mainSkybox.cpp
src/entityComponent/: ByteObject.cpp  ByteObject.hpp  Draw.cpp  Manager.cpp  Manager.hpp  Object.cpp  Object.hpp  UniTree.hpp
src/entityComponent/object/: Background.cpp  Background.hpp  Bomb.cpp  Bomb.hpp  Box.cpp  Box.hpp  Btn.cpp  Btn.hpp  Cube.cpp  Cube.hpp  EscManager.cpp  EscManager.hpp  Floor.cpp  Floor.hpp  GameOpt.cpp  GameOpt.hpp  Ia.cpp  Ia.hpp  Input.cpp  Input.hpp  List.cpp  List.hpp  MImage.cpp  MImage.hpp  MusicManager.cpp  MusicManager.hpp  Particle.cpp  Particle.hpp  Player.cpp  Player.hpp  PlayerAI.cpp  PlayerAI.hpp  PlayerIA.cpp  PlayerIA.hpp  PowerUp.cpp  PowerUp.hpp  Preview.cpp  Preview.hpp  Skybox.cpp  Skybox.hpp  (+6 more)
src/functionalities/: BtnFuncs.cpp  BtnFuncs.hpp  Control.cpp  Control.hpp
src/raylib/: BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Font.cpp  Font.hpp  GamePad.hpp  Gamepad.cpp  Gamepad.hpp  Image.cpp  Image.hpp  KeyBoard.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Mouse.hpp  Music.cpp  Music.hpp  Ray.cpp  Ray.hpp  Rectangle.cpp  Rectangle.hpp  RenderTexture.cpp  RenderTexture.hpp  Shader.cpp  Shader.hpp  Sound.cpp  Sound.hpp  Texture.cpp  Texture.hpp  Vector.cpp  Vector.hpp  Window.cpp  Window.hpp  rayLib.hpp
